--- a/frontend/src/pages/home/components/slider/index.css
+++ b/frontend/src/pages/home/components/slider/index.css
@@ -23,6 +23,10 @@
     align-items: center;
 }
 
+.swiper-wrapper {
+    margin-top: -25px;
+}
+
 .swiper-slide {
     height: 700px;
 }
@@ -37,4 +41,36 @@
 .swiper {
     margin-left: auto;
     margin-right: auto;
+}
+
+.image-container {
+
+    width: 100%;
+    position: relative;
+}
+
+.image-container .text-block {
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.7);
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    width: 80%;
+    text-align: left;
+}
+
+.image-container .text-block h4 {
+
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.swiper-pagination {
+    bottom: 70px !important;
 }
