applied some styles

--- a/frontend/src/pages/Users/index.css
+++ b/frontend/src/pages/Users/index.css
@@ -12,6 +12,7 @@
     border: 2px solid #ffffff;
     padding-top: 15px;
     padding-bottom: 15px;
+    color: #ffffff;
 }
 
 .login-form input:focus,
