--- a/frontend/src/pages/home/components/otherWays/index.css
+++ b/frontend/src/pages/home/components/otherWays/index.css
@@ -19,7 +19,7 @@
 }
 
 .icon-wrapper {
-    background: #18307F;
+    background: #F8AD2E;
     width: 110px;
     height: 110px;
     margin: 0 auto;
