--- a/frontend/src/pages/home/components/slider/index.css
+++ b/frontend/src/pages/home/components/slider/index.css
@@ -23,19 +23,14 @@
     align-items: center;
 }
 
-.swiper-wrapper {
-    margin-top: -25px;
-}
-
-.swiper-slide {
+/* .swiper-slide {
     height: 700px;
-}
+} */
 
 .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
 }
 
 .swiper {
